...
    public static var settingsAppearanceTitle: LocalizedStringResource {
        r("settings_appearance_title", "Appearance")
    }

    /// Theme
    public static var settingsThemeTitle: LocalizedStringResource {
        r("settings_theme_title", "Theme")
    }

    /// Language
    public static var settingsLanguageTitle: LocalizedStringResource {
        r("settings_language_title", "Language")
    }
...
    public static var contributionsSectionTitle: LocalizedStringResource {
        r("contributions_section_title", "Who does what")
    }

    /// Contributions
    public static var contributionsScreenTitle: LocalizedStringResource {
        r("contributions_screen_title", "Contributions")
    }

    /// Week
    public static var contributionsWindowWeek: LocalizedStringResource {
        r("contributions_window_week", "Week")
    }
...
